--- a/CSS/drag.css
+++ b/CSS/drag.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -21,6 +22,8 @@ body {
     border: 1.8px dashed rgba(0, 118, 26, 0.408);
     background-color: rgba(149, 225, 159, 0.361);
     border-radius: 8px;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
 }
 
@@ -36,6 +39,8 @@ body {
 }
 
 .fake-btn i {
+    -webkit-transform: translateY(14px);
+    -ms-transform: translateY(14px);
     transform: translateY(14px);
     vertical-align: middle;
 }
@@ -58,7 +63,9 @@ body {
 }
 
 .section_iconss {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: (1fr)[2];
     grid-template-columns: repeat(2, 1fr);
     max-width: 88%;
     margin: auto;
@@ -73,12 +80,16 @@ body {
     margin-bottom: 0px;
     color: rgba(160, 160, 160, 1);
     font-size: calc(9pt + 0.15vw);
+    -webkit-transform: translate(92px, -10px);
+    -ms-transform: translate(92px, -10px);
     transform: translate(92px, -10px);
     font-family: 'NexaDemo__Bold';
 }
 
 .section_iconss1 {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: (1fr)[2];
     grid-template-columns: repeat(2, 1fr);
     max-width: 88%;
     margin: auto;
@@ -88,11 +99,37 @@ body {
     width: 93%;
     border: none;
     border-radius: 10px;
+    -webkit-transform: translateX(-20px);
+    -ms-transform: translateX(-20px);
     transform: translateX(-20px);
     outline: none;
     padding: 14px;
     font-family: 'Poppins', sans-serif;
     font-size: calc(9pt + 0.15vw);
+}
+
+.mute_iconss1 input::-webkit-input-placeholder {
+    color: rgba(77, 77, 77, 1);
+    opacity: 1;
+    /* Firefox */
+}
+
+.mute_iconss1 input::-moz-placeholder {
+    color: rgba(77, 77, 77, 1);
+    opacity: 1;
+    /* Firefox */
+}
+
+.mute_iconss1 input:-ms-input-placeholder {
+    color: rgba(77, 77, 77, 1);
+    opacity: 1;
+    /* Firefox */
+}
+
+.mute_iconss1 input::-ms-input-placeholder {
+    color: rgba(77, 77, 77, 1);
+    opacity: 1;
+    /* Firefox */
 }
 
 .mute_iconss1 input::placeholder {
@@ -128,6 +165,7 @@ body {
 
 .bg_bl {
     padding: 30px 0px;
+    box-shadow: none;
 }
 
 .bg_ban {
@@ -141,6 +179,7 @@ body {
 
 .brtn button {
     background: #068A23;
+    -webkit-box-shadow: 0px 8px 12px rgba(114, 111, 106, 0.24);
     box-shadow: 0px 8px 12px rgba(114, 111, 106, 0.24);
     border-radius: 10px;
     padding: 10px 40px;
@@ -148,6 +187,14 @@ body {
     color: #ffffff;
     font-size: calc(9pt + 0.15vw);
     font-family: 'NexaDemo__Bold';
+}
+
+.savess button {
+    width: 30%;
+}
+
+.savess button:hover{
+    box-shadow: none;
 }
 
 @media screen and (min-width: 1370px) and (max-width: 1440px) {
@@ -161,6 +208,7 @@ body {
 @media screen and (max-width: 1368px) {
     .section_iconss {
         margin: auto;
+        -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
         max-width: 60%;
     }
@@ -181,6 +229,7 @@ body {
 
     .section_iconss1 {
         max-width: 100%;
+        -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
     }
 
@@ -194,6 +243,8 @@ body {
     }
 
     .fake-btn i {
+        -webkit-transform: translateY(0px);
+        -ms-transform: translateY(0px);
         transform: translateY(0px);
     }
 }
